--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: kanit;
+    src: url(../../public/Kanit-Regular.ttf);
+}
+.kanit {
+    font-family: kanit;
+}
